<?xml version="1.0"?>
<package format="2">
  <name>turtlesim_controller</name>
  <version>0.0.0</version>
  <description>The turtlesim_controller package</description>

  <maintainer email="tnakamura.amsl@gmail.com">Toshiki Nakamura</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>turtlesim</depend>

  <export/>
</package>
