<?xml version="1.0"?>
<package format="3">
  <name>turtlesim_controller</name>
  <version>0.0.0</version>
  <description>The turtlesim_controller package</description>

  <maintainer email="tnakamura.amsl@gmail.com">Toshiki Nakamura</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>ament_cmake_auto</depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>turtlesim</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
